<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbarStyle="outsideOverlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:textDirection="locale">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
            <ImageView android:id="@+id/accessibility_permissionDialog_icon" android:layout_width="36dp" android:layout_height="36dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:scaleType="fitCenter"/>
            <TextView android:textSize="20sp" android:textColor="?attr/textColorPrimary" android:gravity="center" android:id="@+id/accessibility_permissionDialog_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="google-sans-medium"/>
            <TextView android:textAppearance="?attr/textAppearanceMedium" android:id="@+id/accessibility_encryption_warning" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAlignment="viewStart"/>
            <TextView android:textSize="16sp" android:textColor="?attr/textColorPrimary" android:id="@+id/accessibility_permissionDialog_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="32dp" android:text="@string/accessibility_service_warning_description" android:fontFamily="sans-serif"/>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/accessibility_controlScreen_icon" android:layout_width="18dp" android:layout_height="18dp" android:layout_marginRight="12dp" android:src="@drawable/ic_visibility" android:scaleType="fitCenter"/>
                <TextView android:textSize="16sp" android:textColor="?attr/textColorPrimary" android:id="@+id/accessibility_controlScreen_title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/accessibility_service_screen_control_title" android:layout_weight="1" android:fontFamily="sans-serif"/>
            </LinearLayout>
            <TextView android:textSize="14sp" android:textColor="?attr/textColorSecondary" android:id="@+id/accessibility_controlScreen_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/accessibility_service_screen_control_description" android:fontFamily="sans-serif" android:paddingStart="30dp"/>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/accessibility_performAction_icon" android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_pan_tool" android:scaleType="fitCenter" android:layout_marginEnd="12dp"/>
                <TextView android:textSize="16sp" android:textColor="?attr/textColorPrimary" android:id="@+id/accessibility_performAction_title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/accessibility_service_action_perform_title" android:layout_weight="1" android:fontFamily="sans-serif"/>
            </LinearLayout>
            <TextView android:textSize="14sp" android:textColor="?attr/textColorSecondary" android:id="@+id/accessibility_performAction_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/accessibility_service_action_perform_description" android:fontFamily="sans-serif" android:paddingStart="30dp"/>
        </LinearLayout>
        <View android:background="@color/chooser_row_divider" android:layout_width="match_parent" android:layout_height="1dp"/>
        <Button android:id="@+id/accessibility_permission_enable_allow_button" android:background="?attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="56dp" android:text="@string/accessibility_dialog_button_allow" style="?attr/buttonBarPositiveButtonStyle"/>
        <View android:background="@color/chooser_row_divider" android:layout_width="match_parent" android:layout_height="1dp"/>
        <Button android:id="@+id/accessibility_permission_enable_deny_button" android:background="?attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="56dp" android:text="@string/accessibility_dialog_button_deny" style="?attr/buttonBarPositiveButtonStyle"/>
    </LinearLayout>
</ScrollView>
