<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:id="@+id/resolver_empty_state" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
    <RelativeLayout android:gravity="center_horizontal" android:id="@+id/resolver_empty_state_container" android:paddingTop="@dimen/resolver_empty_state_container_padding_top" android:paddingBottom="@dimen/resolver_empty_state_container_padding_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/resolver_empty_state_icon" android:layout_width="24dp" android:layout_height="24dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="14sp" android:textColor="@color/resolver_empty_state_text" android:gravity="center_horizontal" android:id="@+id/resolver_empty_state_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_below="@+id/resolver_empty_state_icon" android:layout_centerHorizontal="true" android:fontFamily="@string/config_headlineFontFamilyMedium"/>
        <TextView android:textSize="12sp" android:textColor="@color/resolver_empty_state_text" android:gravity="center_horizontal" android:id="@+id/resolver_empty_state_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_below="@+id/resolver_empty_state_title" android:layout_centerHorizontal="true"/>
        <Button android:textSize="14sp" android:textColor="?attr/colorAccent" android:id="@+id/resolver_empty_state_button" android:background="@drawable/resolver_turn_on_work_button_ripple_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/resolver_switch_on_work" android:layout_below="@+id/resolver_empty_state_subtitle" android:layout_centerHorizontal="true" android:fontFamily="@string/config_headlineFontFamilyMedium"/>
        <ProgressBar android:id="@+id/resolver_empty_state_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:indeterminate="true" android:layout_below="@+id/resolver_empty_state_subtitle" android:layout_alignTop="@+id/resolver_empty_state_icon" android:layout_alignBottom="@+id/resolver_empty_state_button" android:layout_centerHorizontal="true" android:indeterminateTint="?attr/colorAccent" style="@style/Widget.Material.Light.ProgressBar"/>
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@+id/empty" android:background="?attr/colorBackgroundFloating" android:padding="@dimen/chooser_edge_margin_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="56dp" android:text="@string/noApplications"/>
</RelativeLayout>
