<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.ResolverDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/contentPanel" android:layout_width="match_parent" android:layout_height="match_parent" android:maxWidth="@dimen/resolver_max_width" android:maxCollapsedHeight="@dimen/resolver_max_collapsed_height" android:maxCollapsedHeightSmall="56dp">
    <RelativeLayout android:id="@+id/title_container" android:background="@drawable/bottomsheet_background" android:paddingTop="@dimen/resolver_small_margin" android:paddingBottom="@dimen/resolver_title_padding_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/resolver_edge_margin" android:paddingEnd="@dimen/resolver_edge_margin" android:elevation="@dimen/resolver_elevation" android:layout_alwaysShow="true">
        <TextView android:textAppearance="?attr/textAppearanceButton" android:textColor="?attr/colorAccent" android:gravity="center_vertical" android:id="@+id/profile_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48dp" android:singleLine="true" android:layout_alignParentTop="true" android:layout_marginEnd="8dp" android:layout_alignParentEnd="true" style="?attr/borderlessButtonStyle"/>
        <TextView android:textSize="16sp" android:textColor="?attr/textColorPrimary" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/profile_button" android:fontFamily="@string/config_headlineFontFamilyMedium" android:layout_alignParentStart="true"/>
    </RelativeLayout>
    <View android:id="@+id/divider" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical" android:layout_alwaysShow="true"/>
    <FrameLayout android:id="@+id/stub" android:background="?attr/colorBackgroundFloating" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TabHost android:id="@+id/profile_tabhost" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:accessibilityTraversalAfter="@+id/title">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TabWidget android:id="@+id/tabs" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <View android:id="@+id/resolver_tab_divider" android:background="?attr/colorBackgroundFloating" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical"/>
            <FrameLayout android:id="@+id/tabcontent" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.android.internal.app.ResolverViewPager android:id="@+id/profile_pager" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <LinearLayout android:orientation="vertical" android:id="@+id/button_bar_container" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alwaysShow="true" android:layout_ignoreOffset="true">
        <View android:id="@+id/resolver_button_bar_divider" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical"/>
        <LinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:id="@+id/button_bar" android:paddingTop="@dimen/resolver_button_bar_spacing" android:paddingBottom="@dimen/resolver_button_bar_spacing" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:layoutDirection="locale" android:paddingStart="@dimen/resolver_edge_margin" android:paddingEnd="@dimen/resolver_small_margin" android:elevation="@dimen/resolver_elevation" android:layout_hasNestedScrollIndicator="true" android:layout_ignoreOffset="true" style="?attr/buttonBarStyle">
            <Button android:enabled="false" android:layout_gravity="start" android:id="@+id/button_once" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_resolver_use_once" android:maxLines="2" android:onClick="onButtonClick" android:textAllCaps="false" android:fontFamily="@string/config_headlineFontFamilyMedium" style="?attr/buttonBarButtonStyle"/>
            <Button android:enabled="false" android:layout_gravity="end" android:id="@+id/button_always" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_resolver_use_always" android:maxLines="2" android:onClick="onButtonClick" android:textAllCaps="false" android:fontFamily="@string/config_headlineFontFamilyMedium" style="?attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</com.android.internal.widget.ResolverDrawerLayout>
