<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.ResolverDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/contentPanel" android:layout_width="match_parent" android:layout_height="match_parent" android:maxWidth="@dimen/resolver_max_width" android:maxCollapsedHeight="@dimen/resolver_max_collapsed_height_with_default">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bottomsheet_background" android:paddingTop="@dimen/resolver_small_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="@dimen/resolver_elevation" android:layout_alwaysShow="true">
        <LinearLayout android:orientation="horizontal" android:paddingBottom="@dimen/resolver_edge_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingEnd="@dimen/resolver_edge_margin">
            <ImageView android:layout_gravity="top|left|center_vertical|center_horizontal|center|start" android:id="@+id/icon" android:layout_width="@dimen/resolver_icon_size" android:layout_height="@dimen/resolver_icon_size" android:src="@drawable/resolver_icon_placeholder" android:scaleType="fitCenter" android:layout_marginStart="@dimen/resolver_icon_margin"/>
            <TextView android:textSize="16sp" android:textColor="?attr/textColorPrimary" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:fontFamily="@string/config_headlineFontFamilyMedium" android:paddingEnd="16dp" android:layout_marginStart="@dimen/resolver_icon_margin"/>
            <LinearLayout android:id="@+id/profile_button" android:paddingTop="4dp" android:paddingBottom="4dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginTop="4dp" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginEnd="4dp" style="?attr/borderlessButtonStyle">
                <ImageView android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/icon" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginTop="12dp" android:layout_marginBottom="12dp" android:scaleType="fitCenter" android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"/>
                <TextView android:textAppearance="?attr/textAppearanceButton" android:textColor="?attr/textColorPrimary" android:ellipsize="marquee" android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:minLines="1" android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:id="@+id/button_bar" android:paddingTop="@dimen/resolver_button_bar_spacing" android:paddingBottom="@dimen/resolver_button_bar_spacing" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:layoutDirection="locale" android:paddingStart="@dimen/resolver_edge_margin" android:paddingEnd="@dimen/resolver_small_margin" android:elevation="@dimen/resolver_elevation" android:layout_alwaysShow="true" style="?attr/buttonBarStyle">
            <Button android:enabled="false" android:layout_gravity="start" android:id="@+id/button_once" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_resolver_use_once" android:maxLines="2" android:onClick="onButtonClick" android:textAllCaps="false" android:fontFamily="@string/config_headlineFontFamilyMedium" style="?attr/buttonBarButtonStyle"/>
            <Button android:enabled="false" android:layout_gravity="end" android:id="@+id/button_always" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_resolver_use_always" android:maxLines="2" android:onClick="onButtonClick" android:textAllCaps="false" android:fontFamily="@string/config_headlineFontFamilyMedium" style="?attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
    <View android:id="@+id/divider" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical" android:layout_alwaysShow="true"/>
    <FrameLayout android:id="@+id/stub" android:background="?attr/colorBackgroundFloating" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alwaysShow="true"/>
    <TabHost android:id="@+id/profile_tabhost" android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_alwaysShow="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TabWidget android:id="@+id/tabs" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <View android:id="@+id/resolver_tab_divider" android:background="?attr/colorBackgroundFloating" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical"/>
            <FrameLayout android:id="@+id/tabcontent" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.android.internal.app.ResolverViewPager android:id="@+id/profile_pager" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <View android:background="?attr/colorBackgroundFloating" android:layout_width="match_parent" android:layout_height="1dp" android:foreground="?attr/dividerVertical" android:layout_alwaysShow="true"/>
</com.android.internal.widget.ResolverDrawerLayout>
